--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,10 @@
 /* google fonts  */
 @import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;500;600;700;800&display=swap");
-
+:root {
+  --common-color: #088178;
+  --black-color: #222;
+  --common-transition: all 0.3s ease;
+}
 /*=============== Custom CSS ============ */
 * {
   margin: 0;
@@ -9,25 +13,25 @@
   font-family: "League Spartan", sans-serif;
 }
 h1 {
-  font-size: 50px;
+  font-size: 60px;
   line-height: 64px;
-  color: #222;
+  color: var(--black-color);
 }
 h2 {
-  font-size: 46px;
+  font-size: 56px;
   line-height: 54px;
-  color: #222;
+  color: var(--black-color);
 }
 h4 {
-  font-size: 20px;
-  color: #222;
+  font-size: 25px;
+  color: var(--black-color);
 }
 h6 {
   font-size: 12px;
   font-weight: 700;
 }
 p {
-  font-size: 16px;
+  font-size: 20px;
   color: #465b52;
   margin: 15px 0 20px 0;
 }
@@ -50,6 +54,10 @@ body {
   padding: 20px 80px;
   background-color: #e3e6f3;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+  z-index: 999;
+  position: sticky;
+  top: 0;
+  left: 0;
 }
 #navbar {
   display: flex;
@@ -66,11 +74,11 @@ body {
   font-size: 20px;
   font-weight: 600;
   color: #1a1a1a;
-  transition: all 0.3s ease;
+  transition: var(--common-transition);
 }
 #navbar li a:hover,
 #navbar li a.active {
-  color: #088178;
+  color: var(--common-color);
 }
 #navbar li a.active::after,
 #navbar li a:hover::after {
@@ -78,8 +86,37 @@ body {
   position: absolute;
   width: 30%;
   height: 3px;
-  background-color: #088178;
+  background-color: var(--common-color);
   bottom: -4px;
   left: 20px;
+}
+#hero {
+  background-image: url("../img/hero4.png");
+  height: 90vh;
+  width: 100%;
+  background-size: cover;
+  background-position: top 25% right 0;
+  padding: 0 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+#hero h4 {
+  padding-bottom: 15px;
+}
+#hero h1 {
+  color: var(--common-color);
+}
+#hero button {
+  background-image: url("../img/button.png");
+  background-color: transparent;
+  color: var(--common-color);
+  border: 0;
+  font-size: 20px;
+  font-weight: 700;
+  padding: 14px 80px 14px 65px;
+  cursor: pointer;
+  background-repeat: no-repeat;
 }
 /* ===========Header CSS ================ */
