--- a/CSS/style.css
+++ b/CSS/style.css
@@ -168,4 +168,72 @@ body {
   background-color: #fff2e5;
 }
 /* ============features CSS================= */
+/* ===========Featured Section ============== */
+#product1 {
+  text-align: center;
+}
+#product1 .pro-container {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 20px;
+  flex-wrap: wrap;
+}
+#product1 .pro {
+  width: 23%;
+  min-width: 250px;
+  padding: 10px 12px;
+  border: 1px solid #cce7d0;
+  border-radius: 25px;
+  cursor: pointer;
+  margin: 15px 0;
+  box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
+  transition: var(--common-transition);
+  position: relative;
+}
+#product1 .pro:hover {
+  box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.06);
+}
+#product1 .pro img {
+  width: 100%;
+  border-radius: 20px;
+}
+#product1 .pro .des {
+  text-align: start;
+  padding: 10px 0;
+}
+#product1 .pro .des span {
+  color: #606063;
+  font-size: 18px;
+  font-weight: 500;
+}
+#product1 .pro .des h5 {
+  font-size: 20px;
+  padding-top: 5px;
+  color: #1a1a1a;
+}
+#product1 .pro .des i {
+  font-size: 13px;
+  color: rgb(243, 181, 25);
+  padding: 3px 0px;
+}
+#product1 .pro .des h4 {
+  font-size: 20px;
+  font-weight: 700;
+  padding-top: 5px;
+  color: var(--common-color);
+}
+#product1 .pro .cart {
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  border-radius: 50px;
+  background-color: #e8f6ea;
+  font-weight: 500;
+  color: var(--common-color);
+  border: 1px solid #cce7d0;
+  position: absolute;
+  bottom: 15px;
+  right: 10px;
+}
+/* ===========Featured Section ============== */
 /* ==============Home Page ================= */
