--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,7 +3,8 @@
 :root {
   --common-color: #088178;
   --black-color: #222;
-  --common-transition: all 0.3s ease;
+  --white-color: #fff;
+  --common-transition: all 0.5s ease;
 }
 /*=============== Custom CSS ============ */
 * {
@@ -34,6 +35,18 @@ p {
   font-size: 20px;
   color: #465b52;
   margin: 15px 0 20px 0;
+}
+button.normal {
+  font-size: 18px;
+  font-weight: 600;
+  background-color: var(--white-color);
+  color: var(--black-color);
+  transition: var(--common-transition);
+  padding: 15px 30px;
+  cursor: pointer;
+  border-radius: 4px;
+  outline: none;
+  border: none;
 }
 .section-p1 {
   padding: 40px 80px;
@@ -236,4 +249,36 @@ body {
   right: 10px;
 }
 /* ===========Featured Section ============== */
+/* ==========Banner Section =============== */
+#banner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-image: url("../img/banner/b2.jpg");
+  width: 100%;
+  height: 40vh;
+  background-position: center;
+  background-size: cover;
+}
+#banner h4 {
+  font-size: 22px;
+  color: var(--white-color);
+  letter-spacing: 0.6px;
+}
+#banner h2 {
+  font-size: 40px;
+  color: var(--white-color);
+  letter-spacing: 0.6px;
+  padding: 10px 0;
+}
+#banner span {
+  color: #ef3636;
+}
+#banner button:hover {
+  background-color: var(--common-color);
+  color: var(--white-color);
+}
+/* ==========Banner Section =============== */
 /* ==============Home Page ================= */
