--- a/CSS/style.css
+++ b/CSS/style.css
@@ -336,4 +336,43 @@ body {
   border: 1px solid var(--common-color);
 }
 /* ===========Action Banner Section =========== */
+/* =============Text Banner Section ============ */
+#text-banner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 0 80px;
+}
+#text-banner .banner-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  background-image: url("../img/banner/b7.jpg");
+  width: 31%;
+  height: 30vh;
+  background-position: center;
+  background-size: cover;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+#text-banner .banner-box2 {
+  background-image: url("../img/banner/b4.jpg");
+}
+#text-banner .banner-box3 {
+  background-image: url("../img/banner/b18.jpg");
+}
+#text-banner h2 {
+  font-size: 22px;
+  color: var(--white-color);
+  font-weight: 800;
+}
+#text-banner h3 {
+  font-size: 18px;
+  color: #f33e37;
+  font-weight: 600;
+}
+/* =============Text Banner Section ============ */
+
 /* ==============Home Page ================= */
