--- a/CSS/style.css
+++ b/CSS/style.css
@@ -375,4 +375,49 @@ body {
 }
 /* =============Text Banner Section ============ */
 
+/* =============NewsLatter Section ============ */
+#newslatter {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  background-image: url("../img/banner/b14.png");
+  background-color: #041e42;
+}
+#newslatter h4 {
+  font-size: 25px;
+  color: var(--white-color);
+  font-weight: 800;
+}
+#newslatter p {
+  font-size: 18px;
+  font-weight: var(--FW-600);
+  color: #818ea0;
+}
+#newslatter p span {
+  color: #ffbd27;
+}
+#newslatter .form {
+  display: flex;
+  width: 40%;
+}
+#newslatter input {
+  height: 3.125rem;
+  padding: 0 1.25rem;
+  font-size: 16px;
+  width: 100%;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  outline: none;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+#newslatter button {
+  background-color: var(--common-color);
+  white-space: nowrap;
+  color: var(--white-color);
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+/* =============NewsLatter Section ============ */
 /* ==============Home Page ================= */
