--- a/CSS/style.css
+++ b/CSS/style.css
@@ -484,6 +484,27 @@ footer .copyright {
 /* ===============Footer Section ============== */
 /* ==============Home Page ================= */
 
+/* ==================Shop Page====================== */
+/* ============Shop page Header ==================== */
+#shop-header {
+  background-image: url("../img/banner/b1.jpg");
+  width: 100%;
+  height: 40vh;
+  background-size: cover;
+  padding: 14px;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#shop-header h2,
+#shop-header p {
+  color: var(--white-color);
+}
+/* ============Shop page Header ==================== */
+/* ==================Shop Page====================== */
+
 /* ==================Media Query Section=============== */
 /* ============Home Page Media Quarry tab============= */
 @media (max-width: 799px) {
