--- a/CSS/style.css
+++ b/CSS/style.css
@@ -712,6 +712,10 @@ footer .copyright {
   #newslatter .form {
     width: 70%;
   }
+  /* =============Blog section=============== */
+  #blogs {
+    padding: 150px 100px 0 100px;
+  }
 }
 
 /* ============Home Page Media Quarry mobile============= */
@@ -773,6 +777,23 @@ footer .copyright {
   #product-details .single-product-details {
     width: 100%;
     padding-top: 40px;
+  }
+  /* =============Blog section ============= */
+  #blogs {
+    padding: 100px 30px 0 30px;
+  }
+  #blogs .blog-box {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+  }
+  #blogs .blog-box .blog-img {
+    width: 100%;
+    margin-right: 0px;
+    margin-bottom: 30px;
+  }
+  #blogs .blog-box .blog-details {
+    width: 100%;
   }
 }
 
