--- a/CSS/style.css
+++ b/CSS/style.css
@@ -641,6 +641,11 @@ footer .copyright {
   z-index: -9;
 }
 /* ===============Blog Page section ================ */
+/* ==============About Page Section =================== */
+#shop-header.about-header {
+  background-image: url("../img/about/banner.png");
+}
+/* ==============About Page Section =================== */
 
 /* ==================Media Query Section=============== */
 /* ============Home Page Media Quarry tab============= */
