--- a/CSS/style.css
+++ b/CSS/style.css
@@ -689,11 +689,13 @@ footer .copyright {
 #contacts .contact-details {
   width: 40%;
 }
-#contacts .contact-details span {
+#contacts .contact-details span,
+#form-details form span {
   font-size: 16px;
   font-weight: var(--FW-500);
 }
-#contacts .contact-details h1 {
+#contacts .contact-details h1,
+#form-details form h1 {
   font-size: 28px;
   line-height: 35px;
   letter-spacing: 0.3px;
@@ -725,6 +727,56 @@ footer .copyright {
 #contacts .map iframe {
   width: 100%;
   height: 100%;
+}
+
+/* =============Form contact section ============== */
+#form-details {
+  display: flex;
+  justify-content: space-between;
+  margin: 30px;
+  padding: 80px;
+  border: 1px solid #e1e1e1;
+}
+#form-details form {
+  width: 65%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+#form-details form input,
+#form-details form textarea {
+  width: 100%;
+  padding: 12px 15px;
+  margin-bottom: 20px;
+  outline: none;
+  border: 1px solid #e1e1e1;
+  font-size: 16px;
+}
+#form-details form button {
+  background-color: var(--common-color);
+  color: var(--white-color);
+}
+#form-details .contact-people div {
+  padding-bottom: 20px;
+  display: flex;
+  align-items: flex-start;
+}
+#form-details .contact-people div img {
+  width: 65px;
+  height: 65px;
+  object-fit: cover;
+  margin-right: 15px;
+}
+#form-details .contact-people div p {
+  font-size: 16px;
+  margin: 0;
+  line-height: 25px;
+}
+#form-details .contact-people div span {
+  font-size: 18px;
+  display: block;
+  font-weight: var(--FW-600);
+  color: var(--black-color);
 }
 /* ============Contact page section=============== */
 
