--- a/CSS/style.css
+++ b/CSS/style.css
@@ -868,6 +868,13 @@ footer .copyright {
   #about-head div {
     padding-left: 0px;
   }
+  /* ==============Contact page================ */
+  #form-details {
+    padding: 30px;
+  }
+  #form-details form {
+    width: 50%;
+  }
 }
 
 /* ============Home Page Media Quarry mobile============= */
@@ -954,6 +961,29 @@ footer .copyright {
   #about-app .video {
     width: 100%;
     margin: 10px auto 0 auto;
+  }
+  /* ===========Contact Page============== */
+  #contacts {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+  #contacts .contact-details {
+    width: 100%;
+    margin-bottom: 25px;
+  }
+  #contacts .map {
+    width: 100%;
+    height: 400px;
+  }
+  #form-details {
+    padding: 30px 15px;
+    flex-wrap: wrap;
+    margin: 20px;
+  }
+  #form-details form {
+    width: 100%;
+    margin-bottom: 40px;
   }
 }
 
